<resources>
    <string name="app_name">RegisterApp</string>
    <string name="enter_names">Enter Names</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone">Phone</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="submit">SUBMIT</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
</resources>
